# SentineLLM

./: .gitignore  README.md  dockerfile  log.txt  logs.har  logs.json  rop1.c  storage.rs
IA/modele_LepTess/: Cargo.toml
IA/modele_LepTess/src/: main.rs
IA/modele_tesseract/: Cargo.toml  README.md
IA/modele_tesseract/src/: main.rs
IA/modele_tesseract2/: Cargo.toml
IA/modele_tesseract2/src/: main.rs
IA/pdf2image/: Cargo.toml
IA/pdf2image/src/: main.rs
SentineLLM/pdfchiffre/src/: encryption.rs  storage.rs
embeddings/: Cargo.toml  README.md  create.py  embeddings_labeled_dataset.json
embeddings/k8s/secrets/: encryption-key.yaml
embeddings/src/: extract.rs  main.rs  manipulation_db.rs
logs/: Cargo.toml
logs/src/: extraction.rs  main.rs  manipulation_db.rs  read_write.rs
manipdock/: Cargo.toml
manipdock/src/: encryption.rs  extraction.rs  main.rs  manipulation_db.rs  read_write.rs
pdfchiffre/: Cargo.toml
pdfchiffre/src/: file.rs  main.rs
qdrant/: Cargo.toml
qdrant/src/: main.rs
