[package]
name = "v1"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf-extract = "0.7.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
embed_anything = "0.3.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
qdrant-client = "1.12.1"