[package]
name = "manipdock"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.9" # pour le chiffrement AES-GCM
rand = "0.8"
regex = "1"
chrono = "0.4.38"
